--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,7 @@ output:
 ---
 
 [![Travis-CI Build Status](https://travis-ci.org/jennybc/refactor.svg?branch=master)](https://travis-ci.org/jennybc/refactor)
+[![Coverage Status](https://img.shields.io/codecov/c/github/jennybc/refactor/master.svg)](https://codecov.io/github/jennybc/refactor?branch=master)
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
